--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@emotion/styled": "^11.10.0",
     "@google-pay/button-react": "^3.0.0",
     "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.9.3",
+    "@mui/lab": "^5.0.0-alpha.98",
+    "@mui/material": "^5.10.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
